--- a/orca/Cargo.toml
+++ b/orca/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand = "0.8.5"
 rocket = { version = "0.5.0-rc.2", features = [ "json" ] }
 rocket-validation = "0.1.3"
-sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "postgres", "macros", "time" ] }
+sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "postgres", "macros", "all-types" ] }
 time = { version = "0.3.19", features = [ "serde-human-readable" ] }
