--- a/orca/Cargo.toml
+++ b/orca/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 rand = "0.8.5"
 rocket = { version = "0.5.0-rc.2", features = [ "json" ] }
 rocket-validation = "0.1.3"
+validator = "0.16.0"
 sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "postgres", "macros", "all-types" ] }
 time = { version = "0.3.19", features = [ "serde-human-readable" ] }
