--- a/orca/Cargo.toml
+++ b/orca/Cargo.toml
@@ -12,3 +12,5 @@ rocket-validation = "0.1.3"
 validator = "0.16.0"
 sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "postgres", "macros", "all-types" ] }
 time = { version = "0.3.19", features = [ "serde-human-readable" ] }
+rustc-serialize = "0.3.24"
+tokio = { version = "1.25.0", features = [ "io-std", "fs" ] }
