--- a/orca/Rocket.example.toml
+++ b/orca/Rocket.example.toml
@@ -3,9 +3,14 @@ json = 131072
 
 [global]
 address = "127.0.0.1"
+mandrill_api_key = ""
+email_from_email = "noreply@planning-game.com"
+email_from_name = "Planning Game"
+host = "http://localhost:8000"
+email_confirmation_template_name = "email_confirmation"
 
 [development]
 address = "localhost"
 
 [production]
-address = "0.0.0.0"
+address = "127.0.0.1"
