Send notification emails (#26)
This completes whole registration flow by adding notifications emails
that go out after user verifies their email address.

To recap this is whole flow:

registration request > store registration details to db > store
signature to db > enqueue new member processing > processing stores
image file to disk > query db for user info > generate TeX files > spawn
xelatex to produce pdf > insert pdf to db > send email verification to
new member > track verification sent at > member clicks on link and is
taken to confirmation page > nullyfy verification token and set
vertified at > enqueue new member verified > processing picks the
message and queries db for details about member > query db for
registration pdf > send notification email about newly accepted
registration request.

--- a/orca/Rocket.example.toml
+++ b/orca/Rocket.example.toml
@@ -14,6 +14,8 @@ processing_db_pool = 2
 tex_exe = "xelatex"
 processing_queue_size = 16
 verify_redirects_to = "http://localhost:1313/registration-confirmed"
+notification_email = ""
+new_member_notification_template = "member_registered"
 
 [development]
 address = "localhost"
