--- a/orca/Cargo.toml
+++ b/orca/Cargo.toml
@@ -3,7 +3,8 @@ name = "orca"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+proxy-support = []
 
 [dependencies]
 rand = "0.8.5"
@@ -19,3 +20,6 @@ hyper = { version = "0.14.24", features = [ "http1", "client", "runtime" ] }
 serde_json = "1.0.93"
 hyper-openssl = "0.9.2"
 openssl = "0.10.45"
+cfg-if = "1.0.0"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
