--- a/orca/Rocket.example.toml
+++ b/orca/Rocket.example.toml
@@ -1,10 +1,13 @@
 [global.limits]
-json = 131072
+json = 2_097_152
 
 [global]
 # Bind to
 address = "127.0.0.1"
 host = "http://localhost:8000"
+
+# logging
+log_level = "debug"
 
 # API key for mandrill (mailchip transactional emails)
 # Remember that this is secret!
@@ -32,9 +35,3 @@ verify_redirects_to = "http://localhost:1313/registration-confirmed"
     [global.verify_redirects_to]
     default = "http://localhost:1313/en/confirmed"
     cs = "http://localhost:1313/cs/schvaleno"
-
-[development]
-address = "localhost"
-
-[production]
-address = "127.0.0.1"
