--- a/orca/Cargo.toml
+++ b/orca/Cargo.toml
@@ -21,5 +21,8 @@ serde_json = "1.0.93"
 hyper-openssl = "0.9.2"
 openssl = "0.10.45"
 cfg-if = "1.0.0"
+log = "0.4.17"
+fern = "0.6.1"
+chrono = "0.4.24"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
