--- a/orca/Cargo.toml
+++ b/orca/Cargo.toml
@@ -11,7 +11,7 @@ rand = "0.8.5"
 rocket = { version = "0.5.0-rc.2", features = [ "json" ] }
 rocket-validation = "0.1.3"
 validator = "0.16.0"
-sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "postgres", "macros", "all-types" ] }
+sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "postgres", "macros", "all-types", "uuid" ] }
 time = { version = "0.3.19", features = [ "serde-human-readable" ] }
 rustc-serialize = "0.3.24"
 tokio = { version = "1.25.0", features = [ "io-std", "fs", "process" ] }
@@ -24,5 +24,6 @@ cfg-if = "1.0.0"
 log = "0.4.17"
 fern = "0.6.1"
 chrono = "0.4.24"
+uuid = { version = "1.3.0", features = [ "v4" ] }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
