--- a/orca/Rocket.example.toml
+++ b/orca/Rocket.example.toml
@@ -2,23 +2,26 @@
 json = 2_097_152
 
 [global]
-# Bind to
+# Bind to and host
 address = "127.0.0.1"
 host = "http://localhost:8000"
 
-# logging
+# Logging
 log_level = "debug"
 
 # API key for mandrill (mailchip transactional emails)
 # Remember that this is secret!
-mandrill_api_key = ""
+# If this is not defined instead of sending emails we
+# Just log information that email would be send (for development purposes)
+# This requires info level log to be enabled (which is by default)
+# mandrill_api_key = ""
 
-# Email configuration
-email_from_email = "noreply@planning-game.com"
-email_from_name = "Planning Game"
-email_confirmation_template_name = "email_confirmation"
+# Email (mandrill) configuration
 notification_email = ""
-new_member_notification_template = "member_registered"
+email_sender_email = "noreply@planning-game.com"
+email_sender_name = "Planning Game"
+email_confirmation_template = "email_confirmation"
+email_new_registration_notification_template = "new_registration_notification_template"
 
 # Database
 postgres = "postgres://orca@localhost/ictunion"
@@ -32,6 +35,7 @@ tex_exe = "xelatex"
 processing_queue_size = 16
 verify_redirects_to = "http://localhost:1313/registration-confirmed"
 
+    # Confirmation api redirect urls
     [global.verify_redirects_to]
     default = "http://localhost:1313/en/confirmed"
     cs = "http://localhost:1313/cs/schvaleno"
