--- a/orca/Cargo.toml
+++ b/orca/Cargo.toml
@@ -25,5 +25,6 @@ log = "0.4.17"
 fern = "0.6.1"
 chrono = "0.4.24"
 uuid = { version = "1.3.0", features = [ "v4" ] }
+phf = { version = "0.11.1", features = [ "macros" ] }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
