--- a/orca/Cargo.toml
+++ b/orca/Cargo.toml
@@ -16,15 +16,12 @@ time = { version = "0.3.19", features = [ "serde-human-readable" ] }
 rustc-serialize = "0.3.24"
 tokio = { version = "1.25.0", features = [ "io-std", "fs", "process" ] }
 image = "0.24.5"
-hyper = { version = "0.14.24", features = [ "http1", "client", "runtime" ] }
-serde_json = "1.0.93"
-hyper-openssl = "0.9.2"
-openssl = "0.10.45"
 cfg-if = "1.0.0"
 log = "0.4.17"
 fern = "0.6.1"
 chrono = "0.4.24"
 uuid = { version = "1.3.0", features = [ "v4" ] }
 phf = { version = "0.11.1", features = [ "macros" ] }
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+lettre = { version = "0.10.4", features = [ "tokio1", "tokio1-native-tls" ] }
+handlebars = { git = "https://github.com/turboMaCk/handlebars-rust.git", branch = "master" }
+pest = { version = "=2.5.6" }
