--- a/orca/Cargo.toml
+++ b/orca/Cargo.toml
@@ -23,5 +23,5 @@ chrono = "0.4.24"
 uuid = { version = "1.3.0", features = [ "v4" ] }
 phf = { version = "0.11.1", features = [ "macros" ] }
 lettre = { version = "0.10.4", features = [ "tokio1", "tokio1-native-tls" ] }
-handlebars = { git = "https://github.com/turboMaCk/handlebars-rust.git", branch = "master" }
+handlebars = "4.3.7"
 pest = { version = "=2.5.6" }
