Add kubik to public contributors (#64)

--- a/public-contributors.toml
+++ b/public-contributors.toml
@@ -1,3 +1,7 @@
 [turboMaCk]
 name = "Marek Fajkus"
 email = "marek.faj@gmail.com"
+
+[Kubik161]
+name = [ "Kubik161", "kubik" ]
+email =  [ "30665071+Kubik161@users.noreply.github.com", "jakub.juroska161@gmail.com" ]
