--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,3 +12,13 @@ services:
       POSTGRES_HOST_AUTH_METHOD: "trust"
     ports:
       - "5432:5432"
+  postgrest:
+    image: postgrest/postgrest:v11.1.0
+    environment:
+      PGRST_DB_URI: "postgres://postgrest_authenticator@${DB_USER}:5432/${DB_NAME}"
+      PGRST_DB_SCHEMAS: public
+      PGRST_JWT_SECRET: ${JWT_SECRET}
+      PGRST_JWT_ROLE_CLAIM_KEY: ${PGRST_JWT_ROLE_CLAIM_KEY}
+      PGRST_SERVER_PORT: 6666
+    ports:
+      - "6666:6666"
