--- a/administration-panel/tsconfig.json
+++ b/administration-panel/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "outDir": "./dist/",
     "noImplicitAny": true,
     "module": "es6",
@@ -7,6 +8,10 @@
     "allowJs": false,
     "sourceMap": true,
     "moduleResolution": "nodenext",
-    "jsx": "react"
+    "jsx": "react",
+    "strictNullChecks": true,
+    "paths": {
+      "@app/*": ["./src/*"]
+    }
   }
 }
