--- a/administration-panel/package.json
+++ b/administration-panel/package.json
@@ -32,6 +32,7 @@
     "@mui/material": "^5.14.5",
     "keycloak-js": "^22.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0"
   }
 }
