Make it possible for members to own files, add registration tasks table. (#80)
- Add indirection between registrations and files
- Add similar indirection for members
- Add registration tasks for as pre-onboarding checklist
- Update orca logic to be compatible with new schema

--- a/orca/Rocket.example.toml
+++ b/orca/Rocket.example.toml
@@ -12,7 +12,7 @@ log_level = "debug"
 # Email (smtp) configuration
 smtp_host = "mail.ictunion.cz"
 smtp_user = "noreply@ictunion.cz"
-smtp_password = "68aCcVVawagc4v"
+smtp_password = ""
 
 # Email configuration
 notification_email = ""
