Orca: Integrate with keycloak (#84)
- fetch jwk from keycloak (depending on config)
- validate JWTs issued by keycloak based on JWKs
- verify resource roles from keycloak
- implement basic stats api using keycloak authorization

--- a/.github/workflows/acceptance-test.yaml
+++ b/.github/workflows/acceptance-test.yaml
@@ -57,6 +57,8 @@ jobs:
           ROCKET_SMTP_HOST: "localhost"
           ROCKET_SMTP_USER: ""
           ROCKET_SMTP_PASSWORD: ""
+          ROCKET_KEYCLOAK_HOST: "https://keycloak.ictunion.cz"
+          ROCKET_KEYCLOAK_REALM: "testing-members"
 
       - name: Check status of orca
         run: |
