--- a/orca/Cargo.toml
+++ b/orca/Cargo.toml
@@ -9,6 +9,7 @@ proxy-support = []
 [dependencies]
 rand = "0.8.5"
 rocket = { version = "0.5.0-rc.2", features = [ "json" ] }
+serde = { version = "1.0.147", features = ["derive"] }
 rocket-validation = "0.1.3"
 validator = "0.16.0"
 sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "postgres", "macros", "all-types", "uuid" ] }
@@ -20,7 +21,9 @@ cfg-if = "1.0.0"
 log = "0.4.17"
 fern = "0.6.1"
 chrono = "0.4.24"
-uuid = { version = "1.3.0", features = [ "v4" ] }
+uuid = { version = "1.3.0", features = [ "v4", "serde" ] }
 phf = { version = "0.11.1", features = [ "macros" ] }
 lettre = { version = "0.10.4", features = [ "tokio1", "tokio1-native-tls" ] }
 handlebars = "4.3.7"
+reqwest = { version =  "0.11.18", features = [ "json" ] }
+jsonwebtoken = "8.3.0"
