Spike orca client (#94)
Introduces Melon Head app - web client for orca api.
This is for now just basic scaffolding and most important features for
session management (logout).

--- a/.editorconfig
+++ b/.editorconfig
@@ -35,3 +35,11 @@ indent_size = 4
 [*.json]
 indent_style = space
 indent_size = 2
+
+[*.res]
+indent_style = space
+indent_size = 2
+
+[*.css]
+indent_style = space
+indent_size = 4
