Melon Head: Spike dashboard page (#95)
Implements basic dashboard (as homepage) and 404 page.

--- a/melon-head/package.json
+++ b/melon-head/package.json
@@ -4,6 +4,7 @@
   "description": "Oeca web clinet",
   "scripts": {
     "build": "rescript && parcel build src/index.html",
+    "clean": "rm -rf .parcel-cache",
     "start": "parcel serve src/index.html",
     "watch": "rescript build -w",
     "format": "rescript format -all",
