Switch melon head from parcel to webpack (#99)
Parcel is full of weird & annoying issued so it will be better to use
webpack.

--- a/melon-head/package.json
+++ b/melon-head/package.json
@@ -3,9 +3,8 @@
   "version": "0.1.0",
   "description": "Oeca web clinet",
   "scripts": {
-    "build": "rescript && parcel build src/index.html",
-    "clean": "rm -rf .parcel-cache",
-    "start": "parcel serve src/index.html",
+    "build": "rescript && webpack --mode production",
+    "start": "webpack-dev-server",
     "watch": "rescript build -w",
     "format": "rescript format -all",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,17 +13,24 @@
   "license": "AGPL-3.0-or-later",
   "devDependencies": {
     "@glennsl/rescript-json-combinators": "^1.2.1",
-    "@parcel/transformer-sass": "^2.9.3",
     "@rescript/react": "^0.11.0",
-    "keycloak-js": "^22.0.3",
-    "parcel": "^2.9.3",
-    "process": "^0.11.10",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.8.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.3",
     "rescript": "^10.1.4",
     "rescript-future": "^2.1.0",
-    "rescript-request": "^3.0.1"
+    "rescript-request": "^3.0.1",
+    "sass": "^1.68.0",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "keycloak-js": "^22.0.3"
   }
 }
