--- a/melon-head/config.example.json
+++ b/melon-head/config.example.json
@@ -2,6 +2,6 @@
   "keycloak_url": "https://keycloak.ictunion.cz",
   "keycloak_realm": "testing-members",
   "keycloak_client_id": "orca",
-  "api_url": "http://localhost:8000",
+  "api_url": "/api",
   "profile_url": "https://member.ictunion.cz"
 }
