--- a/.github/workflows/orca.yaml
+++ b/.github/workflows/orca.yaml
@@ -6,7 +6,6 @@ on:
 jobs:
   nix-build:
     runs-on: ubuntu-latest
-    # if: github.ref_name == 'main'
     steps:
       - name: Clone repository
         uses: actions/checkout@v3
@@ -15,6 +14,10 @@ jobs:
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
 
+      - name: Check orca
+        working-directory: orca
+        run: nix flake check --log-format raw
+
       - name: Build via nix
         working-directory: orca
-        run: nix build
+        run: nix build --log-format raw
