--- a/.editorconfig
+++ b/.editorconfig
@@ -36,6 +36,10 @@ indent_size = 4
 indent_style = space
 indent_size = 2
 
+[*.py]
+indent_style = space
+indent_size = 4
+
 [*.res]
 indent_style = space
 indent_size = 2
