--- a/.github/workflows/acceptance-test.yaml
+++ b/.github/workflows/acceptance-test.yaml
@@ -2,8 +2,8 @@ name: "Acceptance Test"
 
 on:
   push:
-    # branches:
-    #   - never
+    branches:
+      - main
 
 jobs:
   run-acceptance-test:
