--- a/members-panel/config.example.json
+++ b/members-panel/config.example.json
@@ -1,5 +1,5 @@
 {
-  "keycloak_url": "https://keycloak.ictunion.cz",
-  "keycloak_realm": "testing-members",
+  "keycloak_url": "http://localhost:8180",
+  "keycloak_realm": "members",
   "keycloak_client_id": "members-panel"
 }
