Orca: Send links to admin in emails (#141)
This changes the notification emails send by orca. Instead of attaching
application PDF we will newly just embed the link for the application
detail in admin. This improves the privacy and security since sensitive
personal information will no longer be contained within emails.

--- a/.github/workflows/orca.yaml
+++ b/.github/workflows/orca.yaml
@@ -15,7 +15,7 @@ jobs:
       - uses: DeterminateSystems/magic-nix-cache-action@main
 
       - name: Check orca
-        run: nix flake check --log-format raw
+        run: nix flake check --log-format raw --option log-lines 100
 
       - name: Build via nix
         run: nix build .#orca --log-format raw
