--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,19 +15,12 @@ services:
       - "5432:5432"
 
   keycloak:
-    image: quay.io/keycloak/keycloak:latest
+    image: quay.io/keycloak/keycloak:23.0.3
     environment:
       KEYCLOAK_ADMIN: ${KEYCLOAK_USER}
       KEYCLOAK_ADMIN_PASSWORD: ${KEYCLOAK_PASSWORD}
     command: |
-      start-dev \
-        --http-port=8180 \
-        --db=postgres \
-        --features=token-exchange \
-        --db-url=jdbc:postgresql://postgres:5432/keycloak \
-        --db-username=${DB_USER} \
-        --db-password=${DB_PASSWORD} \
-        --import-realm
+      start-dev --http-port 8180 --db postgres --features token-exchange --db-url jdbc:postgresql://postgres:5432/keycloak --db-username ${DB_USER} --db-password ${DB_PASSWORD} --import-realm
     volumes:
       - "./docker/keycloak/realm.json:/opt/keycloak/data/import/realm.json"
     ports:
