--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,8 +19,17 @@ services:
     environment:
       KEYCLOAK_ADMIN: ${KEYCLOAK_USER}
       KEYCLOAK_ADMIN_PASSWORD: ${KEYCLOAK_PASSWORD}
-    command: |
-      start-dev --http-port 8180 --db postgres --features token-exchange --db-url jdbc:postgresql://postgres:5432/keycloak --db-username ${DB_USER} --db-password ${DB_PASSWORD} --import-realm
+    command: [
+      "--verbose",
+      "start-dev",
+      "--http-port=8180",
+      "--db=postgres",
+      "--features=token-exchange",
+      "--db-url=jdbc:postgresql://postgres:5432/keycloak",
+      "--db-username=${DB_USER}",
+      "--db-password=${DB_PASSWORD}",
+      "--import-realm"
+      ]
     volumes:
       - "./docker/keycloak/realm.json:/opt/keycloak/data/import/realm.json"
     ports:
