--- a/orca/Cargo.toml
+++ b/orca/Cargo.toml
@@ -27,3 +27,4 @@ lettre = { version = "0.10.4", features = [ "tokio1", "tokio1-native-tls" ] }
 handlebars = "4.3.7"
 reqwest = { version =  "0.11.18", features = [ "json" ] }
 jsonwebtoken = "8.3.0"
+url = "2.5.0"
