Use mjml for defining emails (#170)
Use MJML language to define our email templates. This is first PR for
allowing more types of emails that we can send through Orca.

--- a/orca/Cargo.toml
+++ b/orca/Cargo.toml
@@ -28,3 +28,4 @@ handlebars = "4.3.7"
 reqwest = { version =  "0.11.18", features = [ "json" ] }
 jsonwebtoken = "8.3.0"
 url = "2.5.0"
+mrml = "3.1.0"
