feat: Update Rocket to stable, cleanup, refactoring (#189)
Define direnv for orca
Add rust toolchain sources for RustRover compatibility Update Rocket
from Rc to 5.1
Refactor some legacy code
Split main code to lib for testability
Replace unmaintained rocket-validation with equivalent code Improve
Error types

--- a/public-contributors.toml
+++ b/public-contributors.toml
@@ -5,3 +5,7 @@ email = "marek.faj@gmail.com"
 [Kubik161]
 name = [ "Kubik161", "kubik" ]
 email =  [ "30665071+Kubik161@users.noreply.github.com", "jakub.juroska161@gmail.com" ]
+
+[Kate]
+name =  "Kateřina Churanová"
+email = "katerina@churanova.eu"
