--- a/orca/Cargo.toml
+++ b/orca/Cargo.toml
@@ -8,10 +8,9 @@ proxy-support = []
 
 [dependencies]
 rand = "0.8.5"
-rocket = { version = "0.5.0-rc.2", features = [ "json" ] }
+rocket = { version = "0.5.1", features = [ "json" ] }
 serde = { version = "1.0.147", features = ["derive"] }
-rocket-validation = { git = "https://github.com/somehowchris/rocket-validation.git", rev = "4c81187be2144fefceade0d20e2f2f9ddd244970" }
-validator = "0.16.0"
+validator = { version = "0.19.0", features = [ "derive"] }
 sqlx = { version = "0.7.3", features = [ "runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "ipnetwork", "time" ] }
 time = { version = "0.3.19", features = [ "serde-human-readable" ] }
 rustc-serialize = "0.3.24"
@@ -29,3 +28,4 @@ reqwest = { version =  "0.11.18", features = [ "json" ] }
 jsonwebtoken = "8.3.0"
 url = "2.5.0"
 mrml = "3.1.0"
+thiserror = "2.0.9"
