update keycloak.js (#192)

--- a/members-panel/tsconfig.json
+++ b/members-panel/tsconfig.json
@@ -3,11 +3,11 @@
     "baseUrl": "src",
     "outDir": "./dist/",
     "noImplicitAny": true,
-    "module": "es6",
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "target": "es5",
     "allowJs": false,
     "sourceMap": true,
-    "moduleResolution": "nodenext",
-    "jsx": "react",
+    "jsx": "react"
   }
 }
