Orca: minimal build (#196)
exploration for addressing
https://github.com/ictunion/main-system/issues/194

The scope size become major problem as it forces us to upload gigabytes
of data during deployments. It also is blocker for making OS builds
possible in CI since these now fail on running out of disk space.

--- a/.github/workflows/orca.yaml
+++ b/.github/workflows/orca.yaml
@@ -19,3 +19,16 @@ jobs:
 
       - name: Build via nix
         run: nix build .#orca --log-format raw
+
+  nix-build-min:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Clone repository
+        uses: actions/checkout@v3
+
+      # Nix
+      - uses: DeterminateSystems/nix-installer-action@main
+      - uses: DeterminateSystems/magic-nix-cache-action@main
+
+      - name: Build via nix
+        run: nix build .#orca-min --log-format raw
